--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,35 +1,17 @@
-site_name: obsidian-mkdocs template
+site_name: TestNotes2
 
 theme:
     name: 'material'
     palette:
-
+    
     scheme: gruvbox
     primary: green
     accent: green
 
-    # Light mode
-    #- media: "(prefers-color-scheme: light)"
-    #  scheme: default
-    #  primary: pink
-    #  accent: indigo
-    #  toggle:
-    #    icon: material/toggle-switch-off-outline
-    #    name: Switch to dark mode
-
-    # Dark mode
-    #- media: "(prefers-color-scheme: dark)"
-    #  scheme: slate
-    #  primary: pink
-    #  accent: blue
-    #  toggle:
-    #    icon: material/toggle-switch
-    #    name: Switch to light mode
-
 # Extensions
 markdown_extensions:
   - footnotes
-  # - attr_list
+  - attr_list
   - pymdownx.arithmatex:
       generic: true
   # - pymdownx.superfences
