--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,5 @@ jobs:
         with:
           key: ${{ github.ref }}
           path: .cache
-      - run: pip install mkdocs-material
-      - run: pip install mkdocs-roamlinks-plugin
-      # - run: pip install mkdocs-mermaid2-plugin
+      - run: pip install -r requirements.txt
       - run: mkdocs gh-deploy --force
