--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,11 +3,26 @@ site_url: https://onkeldolf.github.io/TestNotes2
 
 theme:
     name: 'material'
-    custom_dir: docs/overrides
     palette:
-    scheme: gruvbox
-    primary: green
-    accent: green
+
+    # Light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: pink
+      accent: indigo
+      toggle:
+        icon: material/toggle-switch-off-outline
+        name: Switch to dark mode
+
+    # Dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: pink
+      accent: blue
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to light mode
+    
     features:
     - search.highlight
     - navigation.tabs
@@ -22,9 +37,6 @@ markdown_extensions:
   - attr_list
   - pymdownx.arithmatex:
       generic: true
-  # - pymdownx.superfences
-  # - pymdownx.details
-  # - pymdownx.magiclink
   - pymdownx.tasklist:
       custom_checkbox: true
   - def_list
@@ -45,23 +57,3 @@ markdown_extensions:
 plugins:
   - search
   - roamlinks
-  - macros
-  - minify:
-      minify_html: true
-      minify_js: true
-      htmlmin_opts:
-        remove_comments: true
-
-
-extra_javascript:
-  - assets/javascripts/tablesort.js
-
-extra_css:
-  - assets/stylesheets/fonts.css
-  - assets/stylesheets/vars.css
-  - assets/stylesheets/scheme.css
-  - assets/stylesheets/primary.css
-  - assets/stylesheets/accent.css
-  - assets/stylesheets/admonitions.css
-  - assets/stylesheets/fixes.css
-  - assets/stylesheets/styles.css
