--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ theme:
     # Light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      primary: pink
+      primary: black
       accent: indigo
       toggle:
         icon: material/toggle-switch-off-outline
@@ -17,7 +17,7 @@ theme:
     # Dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: pink
+      primary: black
       accent: blue
       toggle:
         icon: material/toggle-switch
