--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: TestNotes2
 site_url: https://onkeldolf.github.io/TestNotes2
 
-index_page: Tasks.md
+index_page: docs/Tasks.md
 theme:
     name: 'material'
     palette:
