--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,8 @@ theme:
     # Dark mode
     - media: "(prefers-color-scheme: dark)"
       sceme: gruvbox-dark
+      primary: custom
+      accent: custom
       #scheme: slate
       #primary: black
       #accent: blue
